--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     <script src="https://cdn.jsdelivr.net/npm/three@0.115/build/three.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/three@0.115/examples/js/loaders/GLTFLoader.js"></script>
     <script>
-
+        
         let request = document.getElementById("pathVariablePlaceholder").innerText
         let q = request.split(",")
-
+        console.log(request);
         let scene, camera, renderer, object;
 
         function init() {
